Bug 308986 - background parser crashes on file pgcollections.py from pyqtgraph package
Summary: background parser crashes on file pgcollections.py from pyqtgraph package
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: Code completion (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR critical
Target Milestone: ---
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-25 16:31 UTC by Dorian Scholz
Modified: 2012-10-25 17:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dorian Scholz 2012-10-25 16:31:03 UTC
I downloaded, compiled and installed succesfully your 1.4 branch (98e5969a84880e5173b20908daababc2dad0140a).
When starting kdevelop it starts the background parsing of the python libs on my system and reliably crashes on the file pgcollections.py form the pyqtgraph package version 213:
http://bazaar.launchpad.net/~luke-campagnola/pyqtgraph/dev/download/213/pgcollections.py-20120913141256-cq94mz3di9yuntmp-1/pgcollections.py

Otherwise I like your plugin very much, thanks a lot for your work!


Reproducible: Always

Steps to Reproduce:
1. install pyqtgraph from here: http://luke.campagnola.me/code/pyqtgraph/
2. start kdevelop with kdev-python
3. wait for the background parser to reach pgcollections.py
Actual Results:  
crash

Expected Results:  
no crash
Comment 1 Sven Brauch 2012-10-25 16:57:38 UTC
Git commit 0c3cb1d3fa6ac7f7f7735ced5a63d43feeae2da8 by Sven Brauch.
Committed on 25/10/2012 at 18:57.
Pushed by brauch into branch '1.4'.

fix another crash with var/kwargs

Note: This function needs to be rewritten for python3 support,
the current approach does not work. Fixes bug

M  +1    -1    duchain/declarationbuilder.cpp

http://commits.kde.org/kdev-python/0c3cb1d3fa6ac7f7f7735ced5a63d43feeae2da8
Comment 2 Sven Brauch 2012-10-25 16:57:54 UTC
Git commit b018846e6908ffed7efebfdc2978aa6f7165d570 by Sven Brauch.
Committed on 25/10/2012 at 18:57.
Pushed by brauch into branch 'master'.

fix another crash with var/kwargs

Note: This function needs to be rewritten for python3 support,
the current approach does not work. Fixes bug

M  +1    -1    duchain/declarationbuilder.cpp

http://commits.kde.org/kdev-python/b018846e6908ffed7efebfdc2978aa6f7165d570
Comment 3 Sven Brauch 2012-10-25 17:00:42 UTC
Thanks for the report -- wait a moment tough, I'm in fact not sure the commit I did really fixed this.
Comment 4 Dorian Scholz 2012-10-25 17:13:05 UTC
Sweet, thanks for the lightning fast fix!
It does not crash anymore, so I'm realy looking forward to working with your plugin now.
Love the popup documentation browser!
Comment 5 Sven Brauch 2012-10-25 17:21:57 UTC
Git commit 718ba906c17d5820f6ed36d42e10490b5fccfced by Sven Brauch.
Committed on 25/10/2012 at 19:21.
Pushed by brauch into branch '1.4'.

Don't count the default parameters twice if getting the param count of a function.

Should now really fix that crash bug.

M  +0    -1    duchain/declarationbuilder.cpp

http://commits.kde.org/kdev-python/718ba906c17d5820f6ed36d42e10490b5fccfced
Comment 6 Sven Brauch 2012-10-25 17:22:06 UTC
Git commit 1c9ecc85c7e6bb57d3682b3623455494d7cad7e8 by Sven Brauch.
Committed on 25/10/2012 at 19:21.
Pushed by brauch into branch 'master'.

Don't count the default parameters twice if getting the param count of a function.

Should now really fix that crash bug.

M  +0    -1    duchain/declarationbuilder.cpp

http://commits.kde.org/kdev-python/1c9ecc85c7e6bb57d3682b3623455494d7cad7e8