fix another crash with var/kwargs

Note: This function needs to be rewritten for python3 support,
the current approach does not work. Fixes bug
BUG:308986